--- a/src/SreBot.Web/Views/Shared/_Layout.cshtml
+++ b/src/SreBot.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
 		<hr />
 		<footer>
 			<p>&copy; 2018 - SREBot</p>
+			<p class="small">Page rendered at @string.Format("{0:s}", DateTime.UtcNow) UTC</p>
 		</footer>
 	</div>
 
