--- a/src/SreBot.Web/Views/IncidentManagement/Active.cshtml
+++ b/src/SreBot.Web/Views/IncidentManagement/Active.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<SharpBotCore.Modules.IncidentManagement.Models.Incident>
+﻿@using Microsoft.Extensions.Options
+@using SreBot.Web
+@model IEnumerable<SharpBotCore.Modules.IncidentManagement.Models.Incident>
+@inject IOptions<IncidentManagementWebConfiguration> IncidentWebConfig
 
 @{
 	ViewData["Title"] = "Active Incidents";
@@ -30,7 +33,8 @@
 		</tr>
 	</thead>
 	<tbody>
-		@foreach (var item in Model) {
+		@foreach (var item in Model.OrderByDescending(x => x.DeclaredDateTimeUtc))
+		{
 			<tr>
 				<td>
 					<a asp-area="" asp-controller="IncidentManagement" asp-action="Incident" asp-route-id=@item.Id>@Html.DisplayFor(modelItem => item.FriendlyId)</a>
@@ -42,7 +46,7 @@
 					@Html.DisplayFor(modelItem => item.Title)
 				</td>
 				<td>
-					@Html.DisplayFor(modelItem => item.ChannelName)
+					<a href="@IncidentWebConfig.Value.GetChannelUrl(item.ChannelId)">@Html.DisplayFor(modelItem => item.ChannelName)</a>
 				</td>
 				<td>
 					@Html.DisplayFor(modelItem => item.DeclaredDateTimeUtc)
