--- a/src/SreBot.Web/Views/IncidentManagement/Active.cshtml
+++ b/src/SreBot.Web/Views/IncidentManagement/Active.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.Extensions.Options
 @using SreBot.Web
-@model IEnumerable<SharpBotCore.Modules.IncidentManagement.Models.Incident>
+@model IEnumerable<CBot.Modules.IncidentManagement.Models.Incident>
 @inject IOptions<IncidentManagementWebConfiguration> IncidentWebConfig
 
 @{
