--- a/src/SreBot.Web/Views/IncidentManagement/Incident.cshtml
+++ b/src/SreBot.Web/Views/IncidentManagement/Incident.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.Extensions.Options
 @using SreBot.Web
-@model SharpBotCore.Modules.IncidentManagement.Models.Incident
+@model CBot.Modules.IncidentManagement.Models.Incident
 @inject IOptions<IncidentManagementWebConfiguration> IncidentWebConfig
 
 @{
