Add NewRelic module

--- a/src/SreBot.Web/Views/Shared/_Layout.cshtml
+++ b/src/SreBot.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
 					<li><a asp-area="" asp-controller="IncidentManagement" asp-action="Index">Incident Management</a></li>
+					<li><a asp-area="" asp-controller="NewRelic" asp-action="Index">NewRelic</a></li>
 				</ul>
 			</div>
 		</div>
