--- a/src/SreBot.Web/Views/Home/Index.cshtml
+++ b/src/SreBot.Web/Views/Home/Index.cshtml
@@ -4,4 +4,17 @@
 
 <h2>Home</h2>
 
+<br />
+
 <p>Hello and welcome to SreBot!</p>
+
+<br />
+
+<p>Interested to learn more about Site Reliability Engineering (SRE) in general? Here's some handly resources:</p>
+<ul>
+	<li><a href="https://landing.google.com/sre/sre-book/toc/index.html">Site Reliability Engineering Book</a></li>
+	<li><a href="https://www.youtube.com/watch?v=n4Wf14e2jxQ">Keys to SRE (video)</a></li>
+	<li><a href="https://blog.newrelic.com/technology/site-reliability-engineering-careers/">10 Things Everybody Needs to Know About Site Reliability Engineering</a></li>
+	<li><a href="https://www.atlassian.com/it-unplugged/devops/site-reliability-engineering-sre">Love DevOps? Wait until you meet SRE</a></li>
+	<li><a href="https://stackify.com/site-reliability-engineering/">What Is Site Reliability Engineering and Why You Should Embrace It</a></li>
+</ul>
